tests/Fixtures/Torture/Bad/index_int.g
// EXPECT G012
kernel { entry func Main() { let int n = 5; let x = n[0]; } }
